--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <section class="hero-image">
-     <div class="container"> <h1 class="heading">Женя Ан</h1>
+     <div class="container"> <h1 class="heading">Женя Анукер</h1>
       <p>Junior верстальщик</p></div>
     </section>
 
