--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">Nonsense Killer</div>
+      <a class="header-email" href="mailto:enot_neopoznanniy@gmail.com">enot_neopoznanniy@gmail.com </a>
+    <a class="header-phone" href="tel:+79876543210">+7 987 654 32 10</a>
     </header>
 
     <section class="hero-image">
@@ -19,6 +21,9 @@
 
     <section class="intro">
       <div class="container"><h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="user-image">
+  <img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+</figure>
       <h3>Пара слов о себе: нужно пробовать</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
@@ -28,7 +33,13 @@
     <section class="portfolio">
      <div class="container"><h2 class="subheading">Мои работы</h2>
 
+<figure class="project-image">
+  <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+</figure>
+
       <h3>Сайт инструктора Кекса</h3>
+      <p>Мой первый сайт</p>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
       <p>Небольшой лендинг о школе для начинающих.</p>
 
       <h3>Блог начинающего верстальщика</h3>
@@ -37,6 +48,8 @@
 
     <footer class="page-footer">
       <div class="container"> Контакты в подвале </div>
+       <a class="footer-email" href="mailto:enot_neopoznanniy@gmail.com">enot_neopoznanniy@gmail.com</a>
+    <a class="footer-phone" href="tel:+79876543210">+7 987 654 32 10</a>
     </footer>
   </body>
 </html>
